Give a very descriptive README.md, alter nav bar and hero to prevent hero overlapping nav

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,8 +1,7 @@
 .hero {
   width: 100%;
   position: relative;
-  display: flex;
-  justify-content: center;
+  z-index: -1;
 }
 
 .hero img {
@@ -13,6 +12,8 @@
 .hero-title {
   position: absolute;
   top: 50px;
+  left: 0;
+  right: 0;
   text-align: center;
   display: flex;
   flex-direction: column;
